--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -7,8 +7,41 @@
           {{ food.name }}
         </div>
         <span class="favorite {{ food.favorite ? '' : 'not' }}"> ❤ </span>
-        <div class="stars"></div>
+        <div class="stars">
+          <ngx-stars
+            [initialStars]="food.stars"
+            checkedcolor="red"
+            uncheckedcolor="black"
+            [readonly]="true"
+          >
+            >
+          </ngx-stars>
+        </div>
+        <div class="product-item-footer">
+          <div class="origins">
+            <span *ngFor="let origin of food.origins">{{ origin }}</span>
+          </div>
+          <div class="cook-time">
+            <span>🕒</span>
+            {{ food.cookTime }}
+          </div>
+        </div>
+        <div class="price">
+          <!--span>💲</span-->
+          {{ food.price | currency }}
+        </div>
       </div>
     </a>
   </li>
 </ul>
+
+<!-- 
+<star-rating
+[value]="food.stars"
+[totalstars]="5"
+checkedcolor="red"
+uncheckedcolor="black"
+size="22px"
+[readonly]="true">
+</star-rating>
+-->
